[package]
name = "cacache"
version = "13.0.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"
description = "Content-addressable, key-value, high-performance, on-disk cache."
license = "Apache-2.0"
repository = "https://github.com/zkat/cacache-rs"
homepage = "https://github.com/zkat/cacache-rs"
readme = "README.md"
categories = ["caching", "filesystem"]

[dependencies]
async-std = { version = "1.12.0", features = ["unstable"], optional = true }
digest = "0.10.6"
either = "1.6.1"
futures = { version = "0.3.30", optional = true }
hex = "0.4.3"
memmap2 = { version = "0.9.4", optional = true }
miette = "7.2.0"
reflink-copy = "0.1.18"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.118"
sha1 = "0.10.6"
sha2 = "0.10.8"
ssri = "9.2.0"
tempfile = "3.10.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
], optional = true }
tokio-stream = { version = "0.1.15", features = ["io-util"], optional = true }
walkdir = "2.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2.144", optional = true }

[dev-dependencies]
async-attributes = { version = "1.1.2" }
criterion = "0.5.1"
lazy_static = "1.4.0"
tokio = { version = "1.12.0", features = [
    "fs",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
] }

[[bench]]
name = "benchmarks"
harness = false

[features]
default = ["async-std", "mmap"]
mmap = ["memmap2", "libc"]
async-std = ["dep:async-std", "futures"]
link_to = []
tokio-runtime = ["tokio", "tokio-stream", "futures"]
